[gd_scene load_steps=6 format=3 uid="uid://dxnoecc3ruw3t"]

[ext_resource type="Script" path="res://src/components/editors/remote/remote_editors.gd" id="1_80m0a"]
[ext_resource type="PackedScene" uid="uid://cb6u1mub27xo" path="res://src/components/asset_download/asset_download.tscn" id="2_obpx8"]
[ext_resource type="PackedScene" uid="uid://ca7g1asyno8ik" path="res://src/components/editors/remote/remote_editor_install/remote_editor_install.tscn" id="3_wvg3b"]
[ext_resource type="PackedScene" uid="uid://dhvesrdvhm6lv" path="res://src/components/editors/remote/remote_editor_direct_link/remote_editor_direct_link.tscn" id="4_nu1uq"]
[ext_resource type="PackedScene" uid="uid://jq7lowjivf6a" path="res://src/components/editors/remote/remote_editors_tree/remote_editors_tree.tscn" id="5_yj8hk"]

[node name="RemoteEditors" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_80m0a")
_editor_download_scene = ExtResource("2_obpx8")
_editor_install_scene = ExtResource("3_wvg3b")
_remote_editor_direct_link_scene = ExtResource("4_nu1uq")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TopActions" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="OpenDownloadsButton" type="Button" parent="VBoxContainer/TopActions"]
unique_name_in_owner = true
layout_mode = 2
text = "Downloads"

[node name="DirectLinkButton" type="Button" parent="VBoxContainer/TopActions"]
unique_name_in_owner = true
layout_mode = 2
text = "Direct Link"

[node name="RefreshButton" type="Button" parent="VBoxContainer/TopActions"]
unique_name_in_owner = true
layout_mode = 2
text = "Refresh"

[node name="TreeMirrorButton" type="OptionButton" parent="VBoxContainer/TopActions"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 10

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="RemoteEditorsTree" parent="VBoxContainer/HBoxContainer" instance=ExtResource("5_yj8hk")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
